--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -11,6 +11,11 @@
 <body>
     <!-- Include the Decap CMS script -->
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <script>
+        window.addEventListener("message", (e) => {
+            console.log("Admin Page Received Message:", e.data);
+        });
+    </script>
 </body>
 
 </html>
